feature(code property graph generator): remove unused scala compiler from docker container

--- a/src/code-property-graph-generator/Dockerfile
+++ b/src/code-property-graph-generator/Dockerfile
@@ -15,10 +15,11 @@ RUN apt-get update && \
         gzip=1.12-1ubuntu3 \ 
         unzip=6.0-28ubuntu4.1 
 
+    # ./coursier install scala:3.3.5 && ./coursier install scalac:3.3.5
 RUN curl -fLo coursier https://github.com/coursier/launchers/raw/master/coursier && \
     chmod +x coursier && \
     ./coursier \
-    ./coursier install scala:3.3.5 && ./coursier install scalac:3.3.5
+    ./coursier install scala:3.3.5
 
 RUN curl -L "https://github.com/joernio/joern/releases/download/v4.0.247/joern-install.sh" -o joern-install.sh && \
     chmod u+x joern-install.sh && \
