--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,11 +1,13 @@
 [project]
 name = 'autopatch'
-version = '0.4.1'
+version = '0.5.0'
 requires-python = '>=3.12.3'
 description = ''
 authors = [
     { name = 'Robert D. Hernandez', email = 'rherna70@uic.edu' },
-    { name = 'Lily Leith', email = 'lleit@uic.edu' }
+    { name = 'Lily Leith', email = 'lleit@uic.edu' },
+    { name = 'Nico Gibson', email = 'ngibs01@jaguar.tamu.edu' },
+    { name = 'Matthew Trevino', email = 'mtrev049@jaguar.tamu.edu' }
 ]
 
 [tool.isort]
