--- a/src/llm-dispatch/config/config.json
+++ b/src/llm-dispatch/config/config.json
@@ -1,6 +1,7 @@
 {
+    "devonlyinputfilepath": "/app/data/dummy_c_file.c",
     "appName": "autopatch.llm-dispatch",
-    "appVersion": "0.1.0",
+    "appVersion": "0.5.0",
     "appDescription": "A system for managing and dispatching requests to various language models.",
     "system_prompt_full_path": "/app/data/prompts/system_prompt.txt",
     "user_prompt_full_path": "/app/data/prompts/user_prompt.txt",
