feature(llm-dispatch): typo fix

--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -75,6 +75,7 @@ tasks:
         - task: autopatchpubsub:install
         - cp ./src/autopatchpubsub/dist/*.whl ./src/fuzzing-service # no private pacakge feeds yet
         - cp ./src/autopatchpubsub/dist/*.whl ./src/patch-evaluation-service # no private pacakge feeds yet
+        - cp ./src/autopatchpubsub/dist/*.whl ./src/code-property-graph-generator # no private pacakge feeds yet
         - cp ./src/autopatchpubsub/dist/*.whl ./src/llm-dispatch # no private pacakge feeds yet
    build-install-shared:
       desc: Build and install shared modules package
