PR#1 new component llm-dispatch-service (#85)
* refactor(logging): extract logging init code into shared module for patch evaluation component and llm dispatch component

* network(devtools): add network as code

* lint(frequency): lower freqeuncy of linting runs from on push to all branches to on push to main and on PR

* feature(MessageBrokerClient): extract MessageBrokerClient into standalone class and wheel, update mqtt echo component for devtooling

* lint(tests): remove unused temp env vars

* lint(isort): run isort

* lint(pipeline): try align CI isort config with project root definition

* lint(CI): path fix for config fix

* lint(CI): add explicit config file with black profile for CI instance of isort

* super linter isort suggestion

* super linter isort suggestion

* super linter isort suggestion

* remove unused logic from test pipeline

* Delete src/fuzzing-service/tests/devcontainer-test-config.json

* Delete src/fuzzing-service/tests/pytest.ini

* feature(llmp-dispatch): WIP early version of llm dispatch service with simple and strategy based invocation and data pojos

* Update test-coverage.yml

* feature(llm-dispatch): add simple iso_8601 timestamps to patch datatypes

* feature(llm-dispatch): WIP strategy pattern works in debugger

* feature(llm-dispatch): rough draft config file

* feature(llm-dispatch): WIP simple invocations of multiple LLMs using openrouter works great

* feature(llm-dispatch): simple test with static program, LLMs now attempt to generate patch files

* feature(llm-dispatch): more fluent invocation of llms using prompt composition and injection of context and configuration, runs to completion now

* refactor(autopatchdatatypes): comment unused code

* feature(llm-dispatch): WIP refactoring improvements

* feature(llm-dispatch): wip refactoring

* docs(references): add some references

* feature(llm-dispatch): runs to completion

* Update .env.example

* Update pyproject.toml

* Update __init__.py

* Update patch_request.py

* 

--- a/src/llm-dispatch/requirements.txt
+++ b/src/llm-dispatch/requirements.txt
@@ -1,2 +1,4 @@
-requests
-openai
+autopatchdatatypes-0.5.0-py3-none-any.whl
+autopatchshared-0.5.0-py3-none-any.whl
+autopatchpubsub-0.5.0-py3-none-any.whl
+openai==1.69.0
