--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -65,6 +65,7 @@ tasks:
         - cp ./src/autopatchdatatypes/dist/*.whl ./src/fuzzing-service # no private pacakge feeds yet
         - cp ./src/autopatchdatatypes/dist/*.whl ./src/patch-evaluation-service # no private pacakge feeds yet
         - cp ./src/autopatchdatatypes/dist/*.whl ./src/code-property-graph-generator # no private pacakge feeds yet
+        - cp ./src/autopatchdatatypes/dist/*.whl ./src/llm-dispatch # no private pacakge feeds yet
    build-install-facades:
       desc: Build and install
       cmds:
@@ -75,6 +76,7 @@ tasks:
         - cp ./src/autopatchpubsub/dist/*.whl ./src/fuzzing-service # no private pacakge feeds yet
         - cp ./src/autopatchpubsub/dist/*.whl ./src/patch-evaluation-service # no private pacakge feeds yet
         - cp ./src/autopatchpubsub/dist/*.whl ./src/code-property-graph-generator # no private pacakge feeds yet
+        - cp ./src/autopatchpubsub/dist/*.whl ./src/llm-dispatch # no private pacakge feeds yet
    build-install-shared:
       desc: Build and install shared modules package
       cmds:
@@ -85,6 +87,7 @@ tasks:
         - cp ./src/autopatchshared/dist/*.whl ./src/fuzzing-service # no private pacakge feeds yet
         - cp ./src/autopatchshared/dist/*.whl ./src/patch-evaluation-service # no private pacakge feeds yet
         - cp ./src/autopatchshared/dist/*.whl ./src/code-property-graph-generator # no private pacakge feeds yet
+        - cp ./src/autopatchshared/dist/*.whl ./src/llm-dispatch # no private pacakge feeds yet
    install-package-dependencies:
       desc: Install package dependencies
       cmds:
@@ -94,9 +97,5 @@ tasks:
         - task: build-install-facades
         - task: fuzzing-service:install
         - task: patch-evaluation-service:install
+        - task: llm-dispatch:install
         - task: code-property-graph-generator:install
-        # - task llm-dispatch:install
-        # - task patch-request-generator-component:install
-        # - task main:install
-        # - task report-generaation:install
-        # - task prompt-evaluation-service:install
