--- a/src/llm-dispatch/Taskfile.yml
+++ b/src/llm-dispatch/Taskfile.yml
@@ -1,11 +1,33 @@
 version: '3'
 
+env:
+  ARGS: --break-system-packages # Use this If you are installing packages using the Taskfile Extension for VSCode UI and devcontainer
+
 tasks:
-  chatgpt-hello-world:
-    dotenv: ['.env']
+  build:
+    desc: Build AutoPatch LLM-Dispatch
     cmds:
-      - python invoke-chatgpt-API-hello-world.py
+      - echo "Building AutoPatch LLM-Dispatch"
+      - python -m build
   install:
-    desc: install autopatch-llmdispatch
+    desc: Install AutoPatch LLM-Dispatch
     cmds:
-      - pip install -r requirements.txt
+      - echo "Installing AutoPatch LLM-Dispatch"
+      - pip install -r requirements.txt  --break-system-packages
+  uninstall:
+    desc: Uninstall AutoPatch LLM-Dispatch
+    cmds:
+      - echo "Uninstalling AutoPatch LLM-Dispatch"
+      - pip uninstall -y autopatchllmdispatch
+  clean:
+    desc: Clean AutoPatch LLM-Dispatch
+    cmds:
+      - echo "Cleaning AutoPatch LLM-Dispatch"
+      - rm -rf ./dist
+      - rm -rf ./build
+      - rm -rf ./autopatchllmdispatch.egg-info
+  test:
+    desc: Test AutoPatch LLM-Dispatch
+    cmds:
+      - echo "Testing AutoPatch LLM-Dispatch"
+      - pytest
