tests(llm-dispatch): rename llm-dispatch to llm-dispatch-service

--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -4,9 +4,9 @@ includes:
    fuzzing-service:
       taskfile: ./src/fuzzing-service/Taskfile.yml
       dir: ./src/fuzzing-service
-   llm-dispatch:
-      taskfile: ./src/llm-dispatch/Taskfile.yml
-      dir: ./src/llm-dispatch
+   llm-dispatch-service:
+      taskfile: ./src/llm-dispatch-service/Taskfile.yml
+      dir: ./src/llm-dispatch-service
    code-property-graph-generator:
       taskfile: ./src/code-property-graph-generator/Taskfile.yml
       dir: ./src/code-property-graph-generator
@@ -65,7 +65,7 @@ tasks:
         - cp ./src/autopatchdatatypes/dist/*.whl ./src/fuzzing-service # no private pacakge feeds yet
         - cp ./src/autopatchdatatypes/dist/*.whl ./src/patch-evaluation-service # no private pacakge feeds yet
         - cp ./src/autopatchdatatypes/dist/*.whl ./src/code-property-graph-generator # no private pacakge feeds yet
-        - cp ./src/autopatchdatatypes/dist/*.whl ./src/llm-dispatch # no private pacakge feeds yet
+        - cp ./src/autopatchdatatypes/dist/*.whl ./src/llm-dispatch-service # no private pacakge feeds yet
    build-install-facades:
       desc: Build and install
       cmds:
@@ -76,7 +76,7 @@ tasks:
         - cp ./src/autopatchpubsub/dist/*.whl ./src/fuzzing-service # no private pacakge feeds yet
         - cp ./src/autopatchpubsub/dist/*.whl ./src/patch-evaluation-service # no private pacakge feeds yet
         - cp ./src/autopatchpubsub/dist/*.whl ./src/code-property-graph-generator # no private pacakge feeds yet
-        - cp ./src/autopatchpubsub/dist/*.whl ./src/llm-dispatch # no private pacakge feeds yet
+        - cp ./src/autopatchpubsub/dist/*.whl ./src/llm-dispatch-service # no private pacakge feeds yet
    build-install-shared:
       desc: Build and install shared modules package
       cmds:
@@ -87,7 +87,7 @@ tasks:
         - cp ./src/autopatchshared/dist/*.whl ./src/fuzzing-service # no private pacakge feeds yet
         - cp ./src/autopatchshared/dist/*.whl ./src/patch-evaluation-service # no private pacakge feeds yet
         - cp ./src/autopatchshared/dist/*.whl ./src/code-property-graph-generator # no private pacakge feeds yet
-        - cp ./src/autopatchshared/dist/*.whl ./src/llm-dispatch # no private pacakge feeds yet
+        - cp ./src/autopatchshared/dist/*.whl ./src/llm-dispatch-service # no private pacakge feeds yet
    install-package-dependencies:
       desc: Install package dependencies
       cmds:
@@ -97,5 +97,5 @@ tasks:
         - task: build-install-facades
         - task: fuzzing-service:install
         - task: patch-evaluation-service:install
-        - task: llm-dispatch:install
+        - task: llm-dispatch-service:install
         - task: code-property-graph-generator:install
