--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,16 +6,16 @@ services:
   autopatch-llm-dispatch-service:
     networks:
       - autopatch-llm_autopatch-docker-network
-    build: ./src/llm-dispatch
+    build: ./src/llm-dispatch-service
     container_name: autopatch-llm-dispatch-service
     environment:
       - LLM_DISPATCH_CONFIG=/app/config/config.json
     env_file:
-      - ./src/llm-dispatch/.env
+      - ./src/llm-dispatch-service/.env
     volumes:
-      - ./src/llm-dispatch/config:/app/config:ro
-      - ./src/llm-dispatch/log:/app/log:rw
-      - ./src/llm-dispatch/data:/app/data:ro
+      - ./src/llm-dispatch-service/config:/app/config:ro
+      - ./src/llm-dispatch-service/log:/app/log:rw
+      - ./src/llm-dispatch-service/data:/app/data:ro
     working_dir: /app
   autopatch-code-property-graph-generator:
     networks:
