--- a/src/llm-dispatch-service/config/config.json
+++ b/src/llm-dispatch-service/config/config.json
@@ -1,11 +1,11 @@
 {
-    "devonlyinputfilepath": "/workspace/AutoPatch-LLM/src/llm-dispatch/data/dummy_c_file.c",
-    "appName": "autopatch.llm-dispatch",
-    "appVersion": "0.1.0",
+    "devonlyinputfilepath": "/app/data/dummy_c_file.c",
+    "appName": "autopatch.llm-dispatch-service",
+    "appVersion": "0.5.0",
     "appDescription": "A system for managing and dispatching requests to various language models.",
-    "system_prompt_full_path": "/workspace/AutoPatch-LLM/src/llm-dispatch/data/prompts/system_prompt.txt",
-    "user_prompt_full_path": "/workspace/AutoPatch-LLM/src/llm-dispatch/data/prompts/user_prompt.txt",
-    "logging_config" : "/workspace/AutoPatch-LLM/src/llm-dispatch/config/dev-logging-config.json",
+    "system_prompt_full_path": "/app/data/prompts/system_prompt.txt",
+    "user_prompt_full_path": "/app/data/prompts/user_prompt.txt",
+    "logging_config" : "/app/config/logging-config.json",
     "default_model": "gpt-3.5-turbo",
     "default_api_provider": "openai",
     "default_in_memory_provider": "openai",
