--- a/.github/workflows/build-and-push-docker-images.yml
+++ b/.github/workflows/build-and-push-docker-images.yml
@@ -10,6 +10,9 @@ on:
     tags:
       - 'v*'
 
+env:
+  PYTHON_VERSION: "3.12.3"
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -25,27 +28,45 @@ jobs:
         uses: step-security/harden-runner@4d991eb9b905ef189e4c376166672c3f2f230481 # v2.11.0
         with:
           egress-policy: audit
-      - name: Checkout repository
-        uses: actions/checkout@v3
+      - name: arduino/setup-task
+        uses: arduino/setup-task@b91d5d2c96a56797b48ac1e0e89220bf64044611 # v2.0.0
 
+      - name: Checkout code
+        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+        with:
+          sparse-checkout: |
+            src
+            Taskfile.yml
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
-
+      - name: Set up Python
+        uses: actions/setup-python@42375524e23c412d93fb67b49958b491fce71c38 # v4
+        with:
+          python-version: ${{ env.PYTHON_VERSION }}
+      - name: Upgrade pip 
+        run: |
+          python -m pip install --upgrade pip
+      - name: Install build module
+        run: |
+          pip install build==1.2.2.post1
+      - name: Build and Install AutoPatch packages
+        run: |
+          task build-install-datatypes
+          task build-install-shared
+          task build-install-facades
       - name: Login to GitHub Container Registry
-        uses: docker/login-action@v2
+        uses: docker/login-action@74a5d142397b4f367a81961eba4e8cd7edddf772 # v3.4.0
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
-
       - name: Extract Docker metadata (tags & labels)
         id: meta
-        uses: docker/metadata-action@v4
+        uses: docker/metadata-action@902fa8ec7d6ecbf8d84d538b9b233a880e428804 # v5.7.0
         with:
           images: ghcr.io/${{ github.repository }}/${{ matrix.image }}
-
       - name: Build and push Docker image
-        uses: docker/build-push-action@v4
+        uses: docker/build-push-action@471d1dc4e07e5cdedd4c2171150001c434f0b7a4 # v6.15.0
         with:
           context: ./src/${{ matrix.image}}
           push: false
