--- a/.github/workflows/build-and-push-docker-images.yml
+++ b/.github/workflows/build-and-push-docker-images.yml
@@ -4,9 +4,11 @@ name: Build and Push Docker Image
 run-name: Build and Push Docker Image by @${{ github.actor }}
 
 on:
+  workflow_dispatch:
+  pull_request:
+    branches: 
+        - main
   push:
-    branches:
-      - feature/docker-container-releases
     tags:
       - 'v*'
 
@@ -65,13 +67,16 @@ jobs:
         uses: docker/metadata-action@902fa8ec7d6ecbf8d84d538b9b233a880e428804 # v5.7.0
         with:
           images: ghcr.io/${{ github.repository }}/${{ matrix.image }}
+          tags: |
+            type=semver,pattern={{version}}
+            type=semver,pattern={{major}}.{{minor}}
+            type=sha
           labels: |
-            org.opencontainers.image.title=${{ matrix.image }}
+            org.opencontainers.image.title=autopatch-${{ matrix.image }}
       - name: Build and push Docker image
         uses: docker/build-push-action@471d1dc4e07e5cdedd4c2171150001c434f0b7a4 # v6.15.0
         with:
           context: ${{ github.workspace }}/src/${{ matrix.image}}
-          push: false
-        #   push: true
+          push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
