--- a/.github/workflows/build-and-push-docker-images.yml
+++ b/.github/workflows/build-and-push-docker-images.yml
@@ -40,7 +40,7 @@ jobs:
             src
             Taskfile.yml
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
+        uses: docker/setup-buildx-action@b5ca514318bd6ebac0fb2aedd5d36ec1b5c232a2 # v3.10.0
       - name: Set up Python
         uses: actions/setup-python@42375524e23c412d93fb67b49958b491fce71c38 # v4
         with:
@@ -73,7 +73,7 @@ jobs:
             type=sha
           labels: |
             org.opencontainers.image.title=autopatch-${{ matrix.image }}
-      - name: Build and push Docker image
+      - name: Build Docker Image, Push Image if not a PR build
         uses: docker/build-push-action@471d1dc4e07e5cdedd4c2171150001c434f0b7a4 # v6.15.0
         with:
           context: ${{ github.workspace }}/src/${{ matrix.image}}
