--- a/src/code-property-graph-generator/Dockerfile
+++ b/src/code-property-graph-generator/Dockerfile
@@ -1,6 +1,8 @@
 # Stage 0: Base
 FROM ubuntu:noble AS base
 
+LABEL org.opencontainers.image.description="Code Property Graph Service"
+
 ENV DEBIAN_FRONTEND=noninteractive
 
 RUN apt-get update && \
@@ -41,9 +43,9 @@ RUN apt-get install -y --no-install-recommends \
 WORKDIR /deps
 
 COPY requirements.txt .
-COPY autopatchshared-0.6.1-py3-none-any.whl .
-COPY autopatchdatatypes-0.6.1-py3-none-any.whl .
-COPY autopatchpubsub-0.6.1-py3-none-any.whl .
+COPY autopatchshared-0.6.2-py3-none-any.whl .
+COPY autopatchdatatypes-0.6.2-py3-none-any.whl .
+COPY autopatchpubsub-0.6.2-py3-none-any.whl .
 
 RUN pip install --break-system-packages --no-cache-dir -r requirements.txt
 
