--- a/src/patch-evaluation-service/Dockerfile
+++ b/src/patch-evaluation-service/Dockerfile
@@ -7,7 +7,7 @@ RUN apt-get update && \
     apt-get install -y --no-install-recommends \
         python3=3.12.3-0ubuntu2
 
-FROM base as python-builder
+FROM base AS python-builder
 
 RUN apt-get install -y --no-install-recommends \
         python3-pip=24.0+dfsg-1ubuntu1.1
