--- a/src/llm-dispatch-service/config/config.json
+++ b/src/llm-dispatch-service/config/config.json
@@ -1,26 +1,26 @@
 {
     "devonlyinputfilepath": "/app/data/dummy_c_file.c",
     "appName": "autopatch.llm-dispatch-service",
-    "appVersion": "0.6.1-alpha",
+    "appVersion": "0.7.0-alpha",
     "appDescription": "A system for managing and dispatching requests to various language models.",
     "system_prompt_full_path": "/app/data/prompts/system_prompt.txt",
     "user_prompt_full_path": "/app/data/prompts/user_prompt.txt",
     "logging_config" : "/app/config/logging-config.json",
-    "default_model": "gpt-3.5-turbo",
+    "default_model": "gpt-4o-mini",
     "default_api_provider": "openai",
     "default_in_memory_provider": "openai",
     "default_max_tokens": 4096,
-    "default_temperature": 0.7,
+    "default_temperature": 1,
     "default_top_p": 1,
     "default_frequency_penalty": 0,
     "default_presence_penalty": 0,
     "message_broker_client_id": "autopatch-llm-dispatch-client",
-    "message_broker_host": "mqtt",
+    "message_broker_host": "mosquitto",
     "message_broker_port": 1883,
     "message_broker_topics": {
-        "request": "llm/dispatch/request",
-        "response": "llm/dispatch/response",
-        "error": "llm/dispatch/error"
+        "request": "autopatch/llm-dispatch/request",
+        "response": "autopatch/llm-dispatch/response",
+        "error": "autopatch/llm-dispatch/error"
     },
     "model_router_base_url": "https://openrouter.ai/api/v1",
     "model_router_fallback_model": "google/gemini-2.5-pro-exp-03-25:free",
@@ -29,45 +29,6 @@
     "model_router_timeout_ms": 3000,
     "model_router_retry_delay_ms": 50,
     "models": [
-        {
-            "gpt-3.5-turbo": {
-                "id": "gpt-3.5-turbo",
-                "name": "GPT-3.5 Turbo",
-                "description": "A powerful language model by OpenAI, suitable for a wide range of tasks.",
-                "model": "gpt-3.5-turbo",
-                "max_tokens": 4096,
-                "temperature": 0.7,
-                "top_p": 1,
-                "frequency_penalty": 0,
-                "presence_penalty": 0,
-                "stop": null,
-                "api_key": "your_openai_api_key",
-                "api_base": "https://api.openai.com/v1",
-                "api_type": "openai",
-                "is_in_memory": false,
-                "in_memory_model_path": "/path/to/gpt-3.5-turbo/model"
-            }
-        },
-        {
-            "gpt-4": {
-                "id": "gpt-4o-mini",
-                "name": "GPT-4o Mini",
-                "description": "The latest and most advanced language model by OpenAI, capable of understanding and generating human-like text.",
-                "model": "gpt-4o-mini",
-                "max_tokens": 8192,
-                "temperature": 0.7,
-                "top_p": 1,
-                "frequency_penalty": 0,
-                "presence_penalty": 0,
-                "stop": null,
-                "api_key": "your_openai_api_key",
-                "api_base": "https://api.openai.com/v1",
-                "api_type": "openai",
-                "openrouter_tag": "openai/gpt-4o-mini:free",
-                "is_in_memory": false,
-                "in_memory_model_path": "/path/to/gpt-4/model"
-            }
-        },
         {
             "llama2": {
                 "id": "llama2",
