--- a/src/fuzzing-service/config/config.json
+++ b/src/fuzzing-service/config/config.json
@@ -20,5 +20,6 @@
     "afl_tool_child_process_memory_limit_mb": 6000,
     "afl_tool_compiled_binary_executables_output_path": "/app/bin/executables_afl",
     "afl_compiler_tool_full_path": "/usr/bin/afl-gcc",
+    "make_tool_full_path" : "/usr/bin/make",
     "iconv_tool_timeout": 120
 }
