--- a/.github/workflows/build-and-push-docker-images.yml
+++ b/.github/workflows/build-and-push-docker-images.yml
@@ -5,9 +5,12 @@ run-name: Build Docker Image, Push if tagged release by @${{ github.actor }}
 
 on:
   workflow_dispatch:
+
   pull_request:
-    branches: 
-        - main
+    branches:
+      - main
+    paths:
+      - 'src/**'
   push:
     tags:
       - 'v*'
