--- a/src/llm-dispatch-service/config/config.json
+++ b/src/llm-dispatch-service/config/config.json
@@ -1,4 +1,5 @@
 {
+    "cpg_scan_result_input_topic" : "autopatch/cpg-scan-result",
     "devonlyinputfilepath": "/app/data/dummy_c_file.c",
     "appName": "autopatch.llm-dispatch-service",
     "appVersion": "0.7.0-alpha",
