--- a/.github/workflows/test-coverage.yml
+++ b/.github/workflows/test-coverage.yml
@@ -37,6 +37,7 @@ jobs:
             assets/input_codebase
             pyproject.toml
             Taskfile.yml
+            pytest.ini
       - name: Set up Python
         uses: actions/setup-python@42375524e23c412d93fb67b49958b491fce71c38 # v5.4.0
         with:
