tests: add coverage gutters for test coverage viewing locally

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -69,7 +69,8 @@
 				"bierner.markdown-mermaid",
 				"bpruitt-goddard.mermaid-markdown-syntax-highlighting",
 				"MS-vsliveshare.vsliveshare",
-				"GitHub.vscode-github-actions"
+				"GitHub.vscode-github-actions",
+				"ryanluker.vscode-coverage-gutters"
 			],
 			"settings": {
 				"git.enableCommitSigning": true,
