[WIP] patch eval ready delay resistant queues for crash detail - llm - executable - patch mappings, llm dispatch support for all programs in input directory

--- a/src/llm-dispatch-service/config/config.json
+++ b/src/llm-dispatch-service/config/config.json
@@ -1,6 +1,6 @@
 {
     "cpg_scan_result_input_topic" : "autopatch/cpg-scan-result",
-    "devonlyinputfilepath": "/app/data/dummy_c_file.c",
+    "input_codebase_full_path": "/app/input_codebase",
     "appName": "autopatch.llm-dispatch-service",
     "appVersion": "0.7.0-alpha",
     "appDescription": "A system for managing and dispatching requests to various language models.",
