added make tool path to config files

--- a/src/patch-evaluation-service/config/config.json
+++ b/src/patch-evaluation-service/config/config.json
@@ -13,5 +13,6 @@
     "message_broker_host": "mosquitto",
     "message_broker_port": 1883,
     "autopatch_crash_detail_input_topic": "autopatch/crash_detail",
-    "autopatch_patch_response_input_topic": "autopatch/patch_response"
+    "autopatch_patch_response_input_topic": "autopatch/patch_response",
+    "make_tool_full_path" : "/usr/bin/make"
 }
