WIP: patch diff is coming in slightly malformed need to continue to debug escapes and newlines

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -51,6 +51,7 @@
 	"customizations": {
 		"vscode": {
 			"extensions": [
+				"vscode-icons-team.vscode-icons",
 				"ms-python.python",
 				"ms-vscode.cpptools-extension-pack",
 				"tomoki1207.pdf",
