--- a/src/patch-evaluation-service/Dockerfile
+++ b/src/patch-evaluation-service/Dockerfile
@@ -27,6 +27,7 @@ FROM base AS final
 
 RUN apt-get install -y --no-install-recommends \
         gcc=4:13.2.0-7ubuntu1 \
+        patch=2.7.6-7build3 \
         gcc-multilib=4:13.2.0-7ubuntu1 \
         libc6-dev-i386=2.39-0ubuntu8.4 && \
     rm -rf /var/lib/apt/lists/*
