--- a/src/llm-dispatch-service/config/config.json
+++ b/src/llm-dispatch-service/config/config.json
@@ -23,7 +23,8 @@
         "response": "autopatch/patch_response"
     },
     "models" : [
-        "mistralai/mistral-small-3.1-24b-instruct:free"
+        "mistralai/mistral-small-3.1-24b-instruct:free",
+        "google/gemini-2.5-pro-exp-03-25:free"
     ],
     "model_router_base_url": "https://openrouter.ai/api/v1",
     "model_router_fallback_model": "google/gemini-2.5-pro-exp-03-25:free",
