updated fuzzing service and patch evaluation service docker files to include make install

--- a/src/fuzzing-service/Dockerfile
+++ b/src/fuzzing-service/Dockerfile
@@ -33,7 +33,8 @@ RUN apt-get install -y --no-install-recommends \
         gcc=4:13.2.0-7ubuntu1 \
         gcc-multilib=4:13.2.0-7ubuntu1 \
         afl++=4.09c-1ubuntu3 \
-        libc6-dev-i386=2.39-0ubuntu8.4 && \
+        libc6-dev-i386=2.39-0ubuntu8.4 \
+        make && \
     rm -rf /var/lib/apt/lists/*
 
 WORKDIR /app
