--- a/src/patch-evaluation-service/Dockerfile
+++ b/src/patch-evaluation-service/Dockerfile
@@ -28,9 +28,11 @@ FROM base AS final
 RUN apt-get install -y --no-install-recommends \
         gcc=4:13.2.0-7ubuntu1 \
         gcc-multilib=4:13.2.0-7ubuntu1 \
-        libc6-dev-i386=2.39-0ubuntu8.4 && \
+        libc6-dev-i386=2.39-0ubuntu8.4 \
+        make && \
     rm -rf /var/lib/apt/lists/*
 
+RUN make --version
 WORKDIR /app
 
 # Copy installed Python packages
