--- a/src/fuzzing-service/config/logging-config.json
+++ b/src/fuzzing-service/config/logging-config.json
@@ -7,6 +7,12 @@
       }
     },
     "handlers": {
+      "file_debug_handler": {
+        "class": "logging.FileHandler",
+        "level": "DEBUG",
+        "formatter": "standard",
+        "filename": "/app/log/autopatch.fuzzing-service.debug.log"
+      },
       "console_err_handler": {
         "class": "logging.StreamHandler",
         "level": "ERROR",
@@ -22,7 +28,7 @@
     },
     "loggers": {
       "autopatch.fuzzing-service": {
-        "handlers": ["console_err_handler", "console_info_handler"],
+        "handlers": ["file_debug_handler", "console_err_handler", "console_info_handler"],
         "level": "DEBUG",
         "propagate": false
       }
