--- a/src/llm-dispatch-service/config/logging-config.json
+++ b/src/llm-dispatch-service/config/logging-config.json
@@ -29,7 +29,7 @@
     "loggers": {
       "autopatch.llm-dispatch-service": {
         "handlers": ["file_debug_handler", "console_err_handler", "console_info_handler"],
-        "level": "INFO",
+        "level": "DEBUG",
         "propagate": false
       }
     }
