--- a/src/fuzzing-service/config/config.json
+++ b/src/fuzzing-service/config/config.json
@@ -1,6 +1,6 @@
 {
-    "version": "0.7.0-alpha",
     "appname": "autopatch.fuzzing-service",
+    "version": "0.8.0-beta",
     "logging_config" : "config/logging-config.json",
     "concurrency_threshold": 10,
     "message_broker_host": "mosquitto",
