--- a/src/patch-evaluation-service/Dockerfile
+++ b/src/patch-evaluation-service/Dockerfile
@@ -29,7 +29,7 @@ RUN apt-get install -y --no-install-recommends \
         gcc=4:13.2.0-7ubuntu1 \
         gcc-multilib=4:13.2.0-7ubuntu1 \
         libc6-dev-i386=2.39-0ubuntu8.4 \
-        make-guile=4.3-4.1build2 && \
+        make=4.3-4.1build2 && \
     rm -rf /var/lib/apt/lists/*
 
 WORKDIR /app
