feature/produce evaluated results data (#123)
* patch eval ready delay resistant queues for crash detail - llm - executable - patch mappings, llm dispatch support for all programs in input directory

* feature(patch-eval): patch eval now correctly zips together crashdetails with patch responses

* testing timeout logic for ready queues, 1 llm at a time avoids hitting rates limits

* patch diff is coming in slightly malformed need to continue to debug escapes and newlines

* E2E now running well enough in testing and writing patch eval data

* E2E now running well and writing patch eval data

* feature(patch-eval): patch eval fully writing evaluated results as raw dataframes, tests updates, add tests, cut line lengths to 140

* less verbose logging on messagebroker

* linter suggestions

* Update code_property_graph_generator.py

* Update fuzzing_service.py

* Update llm_dispatch_svc.py

* Update Dockerfile

* Update Dockerfile

--- a/src/patch-evaluation-service/pyproject.toml
+++ b/src/patch-evaluation-service/pyproject.toml
@@ -1,11 +1,11 @@
 [project]
 name = 'autopatch.patch-evaluation-service'
-version = '0.7.0'
+version = '0.8.0'
 requires-python = '>=3.12.3'
 readme = 'README.md'
 authors = [
-    { name = 'Lily Leith', email = 'lleit@uic.edu' },
-    { name = 'Robert D. Hernandez', email = 'rherna70@uic.edu' }
+    { name = 'Robert D. Hernandez', email = 'rherna70@uic.edu' },
+    { name = 'Lily Leith', email = 'lleit@uic.edu' }
 ]
 
 [build-system]
