--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,5 @@
 ---
 # docker-compose.yaml
-# this file is intended for interactive development only
 
 services:
   autopatch-llm-dispatch-service:
@@ -17,6 +16,7 @@ services:
       - ./src/llm-dispatch-service/config:/app/config:ro
       - ./src/llm-dispatch-service/log:/app/log:rw
       - ./src/llm-dispatch-service/data:/app/data:ro
+      - ./assets/input_codebase:/app/input_codebase:ro
     working_dir: /app
   autopatch-code-property-graph-generator:
     image: ghcr.io/sysec-uic/autopatch-llm/code-property-graph-generator:0.7.0
@@ -61,8 +61,7 @@ services:
       - ./src/patch-evaluation-service/log:/app/log:rw
       - ./src/patch-evaluation-service/data:/app/data:rw
       - ./src/patch-evaluation-service/bin:/app/bin:rw
-      - ./src/patch-evaluation-service/crash_events:/app/crash_events:rw
-      - ./src/patch-evaluation-service/patched_codes:/app/patched_codes:ro
+      - ./assets/input_codebase:/app/input_codebase:ro
     working_dir: /app
   mosquitto:
     image: eclipse-mosquitto:2.0.20
