--- a/src/patch-evaluation-service/config/config.json
+++ b/src/patch-evaluation-service/config/config.json
@@ -14,8 +14,5 @@
     "message_broker_host": "mosquitto",
     "message_broker_port": 1883,
     "autopatch_crash_detail_input_topic": "autopatch/crash_detail",
-    "autopatch_patch_response_input_topic": "autopatch/patch_response",
-    "model_names" : [
-        "mistral-small-3.1-24b-instruct"
-    ]
+    "autopatch_patch_response_input_topic": "autopatch/patch_response"
 }
