--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -30,6 +30,7 @@ tasks:
         - python3 assets/create-docker-network.py
    run:
       desc: Run AutoPatch-LLM
+      cmds:
         - docker compose up
    install-devtools:
       desc: Install AutoPatch devtools
