bugfix(cpg-gen) update joern version from updated dep mismatch

--- a/src/code-property-graph-generator/Dockerfile
+++ b/src/code-property-graph-generator/Dockerfile
@@ -7,7 +7,7 @@ ENV DEBIAN_FRONTEND=noninteractive
 
 RUN apt-get update && \
     apt-get install -y --no-install-recommends \
-        openjdk-21-jdk-headless=21.0.6+7-1~24.04.1 \
+        openjdk-21-jdk-headless \
         python3=3.12.3-0ubuntu2
 
 # Stage 1: Build Joern using minimal tools
@@ -15,10 +15,11 @@ FROM base AS joern-builder
 
 ENV DEBIAN_FRONTEND=noninteractive
 
+
 RUN apt-get install -y --no-install-recommends \
-    ca-certificates=20240203 \
+        ca-certificates=20240203 \
         curl=8.5.0-2ubuntu10.6 \
-        gzip=1.12-1ubuntu3 \
+        gzip \
         unzip=6.0-28ubuntu4.1
 
 WORKDIR /tools
@@ -27,7 +28,7 @@ RUN curl -fLo coursier https://github.com/coursier/launchers/raw/master/coursier
     chmod +x coursier && \
     ./coursier install scala:3.3.5
 
-RUN curl -L "https://github.com/joernio/joern/releases/download/v4.0.247/joern-install.sh" -o joern-install.sh && \
+RUN curl -L "https://github.com/joernio/joern/releases/download/v4.0.324/joern-install.sh" -o joern-install.sh && \
     chmod +x joern-install.sh && \
     ./joern-install.sh
 
@@ -38,7 +39,7 @@ ENV DEBIAN_FRONTEND=noninteractive \
     PYTHONUNBUFFERED=1
 
 RUN apt-get install -y --no-install-recommends \
-        python3-pip=24.0+dfsg-1ubuntu1.1
+        python3-pip=24.0+dfsg-1ubuntu1.2
 
 WORKDIR /deps
 
@@ -51,8 +52,6 @@ RUN pip install --break-system-packages --no-cache-dir -r requirements.txt
 
 # Stage 3: Final runtime image
 FROM base AS final
-
-RUN rm -rf /var/lib/apt/lists/*
 
 ENV DEBIAN_FRONTEND=noninteractive \
     PYTHONUNBUFFERED=1 \
@@ -70,5 +69,7 @@ COPY --from=joern-builder /opt/joern /opt/joern
 # Copy application code
 COPY cpg_svc_config.py .
 COPY code_property_graph_generator.py .
+
+RUN rm -rf /var/lib/apt/lists/*
 
 CMD ["python3", "code_property_graph_generator.py"]
