--- a/src/fuzzing-service/Dockerfile
+++ b/src/fuzzing-service/Dockerfile
@@ -29,11 +29,13 @@ RUN pip install --break-system-packages --no-cache-dir -r requirements.txt
 FROM base AS final
 
 # Install required packages and clean up apt cache
+
+# hadolint ignore=DL3008
 RUN apt-get install -y --no-install-recommends \
         gcc=4:13.2.0-7ubuntu1 \
         gcc-multilib=4:13.2.0-7ubuntu1 \
         afl++=4.09c-1ubuntu3 \
-        libc6-dev-i386=2.39-0ubuntu8.4 && \
+        libc6-dev-i386 \
     rm -rf /var/lib/apt/lists/*
 
 WORKDIR /app
