--- a/src/fuzzing-service/Dockerfile
+++ b/src/fuzzing-service/Dockerfile
@@ -35,7 +35,7 @@ RUN apt-get install -y --no-install-recommends \
         gcc=4:13.2.0-7ubuntu1 \
         gcc-multilib=4:13.2.0-7ubuntu1 \
         afl++=4.09c-1ubuntu3 \
-        libc6-dev-i386 \
+        libc6-dev-i386 && \
     rm -rf /var/lib/apt/lists/*
 
 WORKDIR /app
