--- a/src/patch-evaluation-service/Dockerfile
+++ b/src/patch-evaluation-service/Dockerfile
@@ -25,10 +25,11 @@ RUN pip install --break-system-packages --no-cache-dir -r requirements.txt
 # Stage 3: Final runtime image
 FROM base AS final
 
+# hadolint ignore=DL3008
 RUN apt-get install -y --no-install-recommends \
         gcc=4:13.2.0-7ubuntu1 \
         gcc-multilib=4:13.2.0-7ubuntu1 \
-        libc6-dev-i386=2.39-0ubuntu8.4 && \
+        libc6-dev-i386 && \
     rm -rf /var/lib/apt/lists/*
 
 WORKDIR /app
