bugfix(cpg-gen) update joern version from updated dep mismatch (#137)
* bugfix(cpg-gen) update joern version from updated dep mismatch

* bugfix(cpg gen) suppress version pinning linter block for now

* bugfix(fuzzing svc) suppress version pinning linter block for now

* bugfix(fuzz svc) typo fix in Dockerfile

* bugfix(patch eval) suppress version pinning linter block for now

--- a/src/patch-evaluation-service/Dockerfile
+++ b/src/patch-evaluation-service/Dockerfile
@@ -10,7 +10,7 @@ RUN apt-get update && \
 FROM base AS python-builder
 
 RUN apt-get install -y --no-install-recommends \
-        python3-pip=24.0+dfsg-1ubuntu1.1
+        python3-pip=24.0+dfsg-1ubuntu1.2
 
 WORKDIR /deps
 
@@ -25,10 +25,11 @@ RUN pip install --break-system-packages --no-cache-dir -r requirements.txt
 # Stage 3: Final runtime image
 FROM base AS final
 
+# hadolint ignore=DL3008
 RUN apt-get install -y --no-install-recommends \
         gcc=4:13.2.0-7ubuntu1 \
         gcc-multilib=4:13.2.0-7ubuntu1 \
-        libc6-dev-i386=2.39-0ubuntu8.4 && \
+        libc6-dev-i386 && \
     rm -rf /var/lib/apt/lists/*
 
 WORKDIR /app
